--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+    <meta name="renderer" content="webkit">
+    <meta name="force-rendering" content="webkit">
+    <meta name="applicable-device" content="mobile">
+    <meta http-equiv=X-UA-Compatible content="IE=Edge, chrome=1">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>app</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      ...
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
