feat: enforce https

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<meta http-equiv="Refresh" content="0; url=/home/" />
+<script>
+history.replaceState(null, 'APP', 'https://' + location.hostname + '/home');
+</script>
