--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-history.replaceState(null, 'APP', 'https://' + location.hostname + '/home');
+location.replace('https://' + location.hostname + '/home');
 </script>
